app/stylesheets/_general.sass
body
	font-family: $font_0
	font-weight: 300
	background-color: $orange
	color: $white
	background: $orange
footer
	padding: 40px 0 20px 0
@include media-breakpoint-down(sm)
	footer
		padding: 20px 0
h2
	font-size: 1.8rem
.color-call-to-action
	color: $yellow !important
.logo-container
	img
		width: 100px
.ReactModal__Body--open, .main-menu-open
    height: auto
    overflow: hidden
h1.main-title
	font-size: 2.25rem
	font-weight: bold
	padding-bottom: 1rem
	padding-bottom: 1.5rem
	@include media-breakpoint-down(sm)
		margin-top: 4rem
		padding-top: 4rem
.gradient-content
	background: $orange
	background: -moz-linear-gradient(-45deg, #ffa355 0%, #d85c75 100%)
	background: -webkit-linear-gradient(-45deg, #ffa355 0%,#d85c75 100%)
	background: linear-gradient(135deg, #ffa355 0%,#d85c75 100%) #d85c75
	background-image: linear-gradient(136deg, #ffa355 0%,#d85c75 100%) #d85c75
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa355', endColorstr='#d85c75',GradientType=1 )
	background-attachment: fixed
	background-repeat: no-repeat
	background-size: 100vw 100vh
.gradient-modal
	background: $orange
	background: -moz-linear-gradient(204deg, #d85c75, #ffa256 99%, #ffa355)
	background: -webkit-linear-gradient(204deg, #d85c75, #ffa256 99%, #ffa355)
	background: linear-gradient(204deg, #d85c75, #ffa256 99%, #ffa355)
	background-image: linear-gradient(204deg, #d85c75, #ffa256 99%, #ffa355) #d85c75
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa355', endColorstr='#d85c75',GradientType=1 )
	background-attachment: fixed
	background-repeat: no-repeat
.more-apps
	float: right
	width: 180px
	padding: 0
	margin: 0
	text-align: right
	.ghost
		width: 200px
		padding: 0 0 0 20px
		float: right
		img
			width: 70px
	.btn-default
		width: 180px
		height: 40px
		border-radius: 1.5rem 0 0 1.5rem
		border-right-color: transparent
		&:hover
			background-color: $pompadour
		&:not([disabled]):not(.disabled):active

